<resources>
    <string name="app_name">WeatherApp</string>
    <string name="todo">todo</string>
    <string name="get_start">Get Start</string>
    <string name="search">Search</string>
    <string name="city_name">City Name</string>
    <string name="weather_app">Weather App</string>
    <string name="response_city_name">Response City name</string>
    <string name="teperature_c">Teperature °C</string>
</resources>